--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
               <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                   <h4 class="modal-title" id="mySmallModalLabel">Hold Order
-                      <!-- <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt=""> -->
+                      <!-- <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/public/images/loading.gif" alt=""> -->
                   </h4>
               </div>
               <div class="modal-body">
@@ -432,7 +432,7 @@
               <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                   <h4 class="modal-title" id="mySmallModalLabel">New Customer
-                      <!-- <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt=""> -->
+                      <!-- <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/public/images/loading.gif" alt=""> -->
                   </h4>
               </div>
               <div class="modal-body">
@@ -469,7 +469,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title" id="mySmallModalLabel">Product
-                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                     </h4>
                 </div>
                 <div class="modal-body">
@@ -516,7 +516,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                         <h4 class="modal-title" id="mySmallModalLabel">Category
-                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                         </h4>
                     </div>
                     <div class="modal-body">
@@ -542,7 +542,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                         <h4 class="modal-title" id="mySmallModalLabel">Products
-                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                             <button class="btn btn-white pull-right" id="print_list">Download</button>
                         </h4>                        
                     </div>
@@ -576,7 +576,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title" id="mySmallModalLabel">Users
-                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                      </h4>                        
                 </div>
                  <div class="modal-body" id="all_userss" style="padding: 20px; padding-right: 40px;"> 
@@ -606,7 +606,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                         <h4 class="modal-title" id="mySmallModalLabel">Categories
-                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                         </h4>
                     </div>
                     <div class="modal-body">
@@ -633,7 +633,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title" id="mySmallModalLabel">Account Infomarion
-                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                        <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                     </h4>
                 </div>
                 <div class="modal-body">
@@ -756,7 +756,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                         <h4 class="modal-title" id="mySmallModalLabel">Settings
-                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="assets/images/loading.gif" alt="">
+                            <img  class="loading m-t-5" style="margin-left: 35%" height="50px" src="public/images/loading.gif" alt="">
                         </h4>
                     </div>
                     <div class="modal-body">  
@@ -792,7 +792,7 @@
                             </div>
                     </div>
                      <div class="form-group">
-                        <input id="save_settings" type="submit" class="btn btn-default btn-block waves-effect waves-light" value="Save Settings">
+                        <input id="save_settings-1" type="submit" class="btn btn-default btn-block waves-effect waves-light" value="Save Settings">
                     </div>
                  </div>
                 </form>
@@ -864,7 +864,7 @@
 
                        
                         <div class="form-group">
-                                <input id="save_settings" type="submit" class="btn btn-default btn-block waves-effect waves-light" value="Save Settings">
+                                <input id="save_settings-2" type="submit" class="btn btn-default btn-block waves-effect waves-light" value="Save Settings">
                         </div>
 
                     </form>
